[gd_scene load_steps=11 format=3 uid="uid://dhq3orgwk8ccw"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_u6b88"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/ap.gd" id="2_2fawb"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_2yy4q"]
[ext_resource type="Texture2D" uid="uid://bkp8gbivdpjm" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown.png" id="4_fncrm"]
[ext_resource type="Texture2D" uid="uid://ceku0o1lajwmu" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_pressed.png" id="5_55cwe"]
[ext_resource type="Texture2D" uid="uid://bewr0f1ty1b3v" path="res://assets/gui/menu/buttons/buttonSquareSmall_brown_hover.png" id="6_w6gkf"]
[ext_resource type="PackedScene" uid="uid://gxr1dxy4v75y" path="res://scenes/ui/icons/pen.tscn" id="7_bjjoy"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_fbx0a"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_jo44s"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_rpll3"]

[node name="AP" instance=ExtResource("1_u6b88")]
script = ExtResource("2_2fawb")

[node name="player_side" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_2yy4q")
text = "TR_PLAYER_SIDE"
vertical_alignment = 1

[node name="side" type="LineEdit" parent="player_side" index="0"]
layout_mode = 0
offset_left = 400.0
offset_right = 540.0
offset_bottom = 40.0
alignment = 1

[node name="side_picker_button" type="TextureButton" parent="player_side" index="1"]
layout_mode = 0
offset_left = 350.0
offset_right = 386.0
offset_bottom = 40.0
texture_normal = ExtResource("4_fncrm")
texture_pressed = ExtResource("5_55cwe")
texture_hover = ExtResource("6_w6gkf")
texture_focused = ExtResource("6_w6gkf")

[node name="anchor" type="Control" parent="player_side/side_picker_button" index="0"]
anchors_preset = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -2.0
offset_bottom = -2.0

[node name="hourglass" parent="player_side/side_picker_button/anchor" index="0" instance=ExtResource("7_bjjoy")]

[node name="amount" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = -250.0
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_2yy4q")
text = "TR_AMOUNT"
vertical_alignment = 1

[node name="amount" type="LineEdit" parent="amount" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
text = "1"
alignment = 1

[node name="set" type="Label" parent="." index="6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_2yy4q")
text = "TR_SET"
vertical_alignment = 1

[node name="set_button" type="TextureButton" parent="set" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_fbx0a")
texture_pressed = ExtResource("9_jo44s")
texture_hover = ExtResource("10_rpll3")
texture_focused = ExtResource("10_rpll3")

[node name="label" type="Label" parent="set/set_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_2yy4q")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cap" type="Label" parent="." index="7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 300.0
offset_right = -250.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_2yy4q")
text = "TR_CAP"
vertical_alignment = 1

[node name="cap_button" type="TextureButton" parent="cap" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_fbx0a")
texture_pressed = ExtResource("9_jo44s")
texture_hover = ExtResource("10_rpll3")
texture_focused = ExtResource("10_rpll3")

[node name="label" type="Label" parent="cap/cap_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_2yy4q")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="text_changed" from="player_side/side" to="." method="_on_text_changed"]
[connection signal="pressed" from="player_side/side_picker_button" to="." method="_on_side_picker_button_pressed"]
[connection signal="text_changed" from="amount/amount" to="." method="_on_text_changed"]
[connection signal="pressed" from="set/set_button" to="." method="_on_set_button_pressed"]
[connection signal="pressed" from="cap/cap_button" to="." method="_on_cap_button_pressed"]
